--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pg-query-native",
-  "version": "1.1.0",
+  "version": "1.1.0-v12",
   "description": "The real PostgreSQL query parser",
   "homepage": "http://github.com/zhm/node-pg-query-native",
   "main": "index.js",
@@ -10,11 +10,11 @@
     "rebuild": "./node_modules/node-gyp/bin/node-gyp.js configure rebuild",
     "test": "mocha"
   },
-  "author": "Zac McCormick <zac.mccormick@gmail.com> (http://github.com/zhm)",
+  "author": "Dan Lynch <pyramation@gmail.com> (http://github.com/pyramation)",
   "license": "BSD",
   "repository": {
     "type": "git",
-    "url": "git://github.com/zhm/node-pg-query-native.git"
+    "url": "git://github.com/pyramation/node-pg-query-native.git"
   },
   "devDependencies": {
     "mocha": "^2.5.3"
