--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pg-query-native",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "The real PostgreSQL query parser",
   "homepage": "http://github.com/zhm/node-pg-query-native",
   "main": "index.js",
@@ -17,12 +17,12 @@
     "url": "git://github.com/zhm/node-pg-query-native.git"
   },
   "devDependencies": {
-    "mocha": "^9.1.2",
-    "node-gyp": "^8.2.0"
+    "mocha": "^9.1.2"
   },
   "dependencies": {
     "bindings": "^1.5.0",
-    "nan": "^2.15.0"
+    "nan": "^2.15.0",
+    "node-gyp": "^8.2.0"
   },
   "keywords": [
     "sql",
